[ANY] IDEA code inspect